# snakes-cafe

snakes_cafe/: README.md  pyproject.toml
snakes_cafe/snakes_cafe/: menu.json  snakes_cafe.py
